syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.tnmk.practice.springgrpc.protobuf";

service StreamDownloadZipFilesGrpcService {
    rpc downloadFile (StreamDownloadZipFilesRequestProto) returns (stream StreamDownloadChunkProto);
}

message StreamDownloadZipFilesRequestProto {
    //string fileName = 1;
    int64 numZipFiles = 1;
}

message StreamDownloadChunkProto {
    bytes data = 1;
}